--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ psycopg2-binary==2.9.7
 whitenoise[brotli]==6.5.0
 gunicorn==21.2.0
 pillow==10.0.0
+captcha==0.3
+django-simple-captcha==0.5.12
+django-ranged-response==0.2.
+django-recaptcha==2.0.6
+six==1.15.0
